# weather-kitchen

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: backend-ci.yml  frontend-ci.yml
backend/: .coverage  .dockerignore  .env.example  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml  weather_kitchen.db
backend/alembic/: env.py
backend/alembic/versions/: 251d1db8a18d_initial_database_schema_with_uuid_.py  454939a8f035_jwt_auth_add_refresh_tokens_remove_api_.py  a863c5ea1bbc_add_password_hash_to_families.py
backend/app/: config.py  constants.py  database.py  main.py
backend/app/api/v1/: auth.py  families.py  recipes.py  router.py  stats.py  users.py
backend/app/auth/: __init__.py  dependencies.py  jwt.py  password.py  pin.py  token.py
backend/app/middleware/: __init__.py  error_handler.py  rate_limiter.py  request_id.py  request_logging.py  security_headers.py
backend/app/models/: __init__.py  audit.py  base.py  family.py  recipe.py  refresh_token.py  user.py
backend/app/repositories/: base.py  family_repo.py  recipe_repo.py  refresh_token_repo.py  user_repo.py
backend/app/schemas/: auth.py  common.py  family.py  recipe.py  stats.py  user.py
backend/app/seed/: seed_recipes.py
backend/app/seed/data/: recipes.json
backend/app/services/: audit_service.py  family_service.py  recipe_service.py  user_service.py
backend/data/: weather_kitchen.db-shm  weather_kitchen.db-wal
backend/tests/: conftest.py  factories.py
backend/tests/integration/: test_family_endpoints.py  test_recipe_endpoints.py  test_stats_endpoints.py  test_user_endpoints.py
backend/tests/security/: test_auth_bypass.py  test_idor.py  test_input_validation.py  test_jwt.py  test_pin_bruteforce.py  test_rate_limiting.py  test_sql_injection.py  test_token_validation.py  test_xss_payloads.py
backend/tests/unit/: test_family_service.py  test_recipe_repo.py  test_recipe_service.py  test_user_service.py
docs/: AUTH_FLOW_IMPLEMENTATION_PLAN.md  Ari_Initiatives_Through_DevOps_Books.md  BACKEND_IMPLEMENTATION_PLAN.md  CI-CD-ALIGNMENT-WITH-ARTEMIS-LESSONS.md  CI-CD-IMPLEMENTATION-PLAN.md  CI-CD-REVIEW.md  CSRF.md  FRONTEND_IMPLEMENTATION_PLAN.md  backend-deployment.md  weather_kitcne_prd.md
frontend/: Dockerfile  README.md  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
scripts/: deploy-to-ecr.sh  fetch_recipes.py  generate_kid_recipes.py
(+62 files in other folders)
