[project]
name = "weather-kitchen-api"
version = "0.1.0"
description = "COPPA-compliant recipe discovery API for children aged 6-12"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core API
    "fastapi>=0.129.0",
    "uvicorn[standard]>=0.40.0",
    "python-multipart>=0.0.22",
    # Database
    "sqlalchemy[asyncio]>=2.0.46",
    "alembic>=1.18.4",
    # Data validation
    "pydantic>=2.12",
    "pydantic-settings>=2.0",
    "email-validator>=2.0",
    # Security - Use bcrypt directly (not passlib)
    "bcrypt>=5.0.0",
    # JWT Authentication
    "pyjwt>=2.9.0",
    # Production
    "gunicorn>=23.0.0",
    # PostgreSQL driver (production)
    "psycopg2-binary>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "pytest-benchmark>=4.0",
    "httpx>=0.27",
    "ruff>=0.15",
    "bandit>=1.9",
    "locust>=2.43",
    "factory-boy>=3.3",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "pytest-benchmark>=4.0",
    "httpx>=0.27",
    "ruff>=0.15",
    "bandit>=1.9",
    "locust>=2.43",
    "factory-boy>=3.3",
]

[tool.ruff]
target-version = "py311"
line-length = 100
lint.select = ["E", "F", "W", "I", "N", "UP", "S"]
lint.ignore = [
    "E501",   # Line length handled separately
    "S104",   # Binding to 0.0.0.0 is intentional for containerised services
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "S101",   # assert is the standard assertion mechanism in pytest
    "S105",   # test helpers may contain token/secret literals
    "S106",   # test helpers may pass literal token values
    "S107",   # test helpers may use literal passwords
]
"app/config.py" = [
    "S105",   # _DEV_JWT_SECRET is an intentional insecure-by-design dev fallback
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=app --cov-report=html --cov-report=term-missing"
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.coverage.run]
source = ["app"]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
precision = 2
